# X-ways-Forensics-mcp

./: .gitignore  FIRST_RUN_CHECKLIST.md  README.md  pyproject.toml  run_xwf_mcp.py
templates/: bridge-guide.md
templates/schemas/: encrypted-files.schema.json  event-logs-system.schema.json  installed-software.schema.json  registry-devices.schema.json  registry-system.schema.json  search-hits.schema.json  sunlogin-logs.schema.json  volume-snapshot.schema.json
xwf_mcp/: __init__.py  addon_tools.py  config.py  legacy_qa_bank.py  models.py  offline_qa_answers.py  offline_qa_plan.py  parsers.py  server.py  service.py
