[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xwf-mcp"
version = "0.1.0"
description = "MCP server that wraps X-Ways Forensics 20.0 CLI/.whs automation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
]

[project.scripts]
xwf-mcp = "xwf_mcp.server:main"

[tool.setuptools.packages.find]
include = ["xwf_mcp*"]

